# web

./: .gitignore  README.md  pyproject.toml
scheduler/: models.py  serializers.py  urls.py  views.py
scheduler/migrations/: 0001_initial.py  0002_auto_20220201_1704.py  0003_rename_task_list_task_user.py  0004_auto_20220202_1435.py  0005_auto_20220202_1519.py  0006_alter_task_title.py
web/: settings.py  urls.py
web/web/: settings.py
